; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/bfs/extr_inode.c_bfs_sync_fs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/bfs/extr_inode.c_bfs_sync_fs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.super_block = type { i64 }
%struct.bfs_sb_info = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.super_block*, i32)* @bfs_sync_fs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bfs_sync_fs(%struct.super_block* %0, i32 %1) #0 {
  %3 = alloca %struct.super_block*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.bfs_sb_info*, align 8
  store %struct.super_block* %0, %struct.super_block** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.super_block*, %struct.super_block** %3, align 8
  %7 = call %struct.bfs_sb_info* @BFS_SB(%struct.super_block* %6)
  store %struct.bfs_sb_info* %7, %struct.bfs_sb_info** %5, align 8
  %8 = load %struct.bfs_sb_info*, %struct.bfs_sb_info** %5, align 8
  %9 = getelementptr inbounds %struct.bfs_sb_info, %struct.bfs_sb_info* %8, i32 0, i32 0
  %10 = call i32 @mutex_lock(i32* %9)
  %11 = load %struct.bfs_sb_info*, %struct.bfs_sb_info** %5, align 8
  %12 = getelementptr inbounds %struct.bfs_sb_info, %struct.bfs_sb_info* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @mark_buffer_dirty(i32 %13)
  %15 = load %struct.super_block*, %struct.super_block** %3, align 8
  %16 = getelementptr inbounds %struct.super_block, %struct.super_block* %15, i32 0, i32 0
  store i64 0, i64* %16, align 8
  %17 = load %struct.bfs_sb_info*, %struct.bfs_sb_info** %5, align 8
  %18 = getelementptr inbounds %struct.bfs_sb_info, %struct.bfs_sb_info* %17, i32 0, i32 0
  %19 = call i32 @mutex_unlock(i32* %18)
  ret i32 0
}

declare dso_local %struct.bfs_sb_info* @BFS_SB(%struct.super_block*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mark_buffer_dirty(i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
